feat: finalizando desafio-01 com animações css e javascript

--- a/desafio-01/css/style.css
+++ b/desafio-01/css/style.css
@@ -56,7 +56,7 @@ header .search-blog {
 
   background-color: var(--dark-30);
   border: 2px solid var(--dark-40);
-  transition: border 0.2s ease;
+  transition: border 0.3s ease;
   border-radius: 8px;
 
   padding: 1rem 1.5rem;
@@ -91,10 +91,15 @@ header .search-blog input::-webkit-input-placeholder {
 .card {
   background-color: var(--dark-20);
   border: solid 2px var(--dark-40);
+  transition: border 0.3s ease;
   border-radius: 8px;
 
   padding: 2rem 1.5rem;
   margin: 0 1.5rem 2.5rem 1.5rem;
+}
+
+.card:hover {
+  border: solid 2px var(--brand-color);
 }
 
 .card .date {
@@ -113,22 +118,18 @@ header .search-blog input::-webkit-input-placeholder {
   color: var(--brand-color);
 }
 
-.card .date img {
+.card .date .icon-heart {
   width: 17.5px;
-}
-
-.card .date .icon-search {
-  width: 17.5px;
-  fill: #17171A;
-  stroke: #E07B67;
+  fill: var(--dark-20);
+  stroke: var(--brand-color);
   stroke-width: 7;
   transition: fill 0.3s;
   cursor: pointer;
 }
 
-.icon-search.filled,
-.icon-search:hover {
-  fill: #E07B67;
+.card .date .icon-heart.filled,
+.card .date .icon-heart:hover {
+  fill: var(--brand-color);
 }
 
 .card h2 {
@@ -187,7 +188,7 @@ header .search-blog input::-webkit-input-placeholder {
     line-height: 16.94px;
   }
   
-  .card .date .icon-search {
+  .card .date .icon-heart {
     width: 21px;
   }
   
@@ -211,6 +212,14 @@ header .search-blog input::-webkit-input-placeholder {
     width: 28px;
   }
 
+  header .search-blog {
+    margin: 3rem 0 4rem 0;
+  }
+
+  .card {
+    margin: 0 0 2.5rem 0;
+  }
+
   .card .date {
     margin-bottom: 1.25rem;
   }
@@ -220,7 +229,7 @@ header .search-blog input::-webkit-input-placeholder {
     line-height: 19.36px;
   }
   
-  .card .date .icon-search {
+  .card .date .icon-heart {
     width: 32px;
   }
   
@@ -230,7 +239,7 @@ header .search-blog input::-webkit-input-placeholder {
   }
 
   .card p {
-    font-size: 1.18rem;
+    font-size: 1.25rem;
     line-height: 32px;
   }
 }
