--- a/desafio-01/css/style.css
+++ b/desafio-01/css/style.css
@@ -169,8 +169,11 @@ footer p {
 }
 
 footer a {
-  text-decoration: none;
   color: var(--brand-color);
+}
+
+footer a:hover {
+  text-decoration: none;
 }
 
 @media screen and (min-width: 768px) {
