--- a/desafio-02/css/styles.css
+++ b/desafio-02/css/styles.css
@@ -20,6 +20,7 @@ body {
   --white: #FFFFFF;
 }
 
+/*=== NOTICE ==========*/
 .notice {
   background-color: var(--gray);
 
@@ -65,3 +66,81 @@ header p {
 
   max-width: 20.5rem;
 }
+
+/*=== SECTION ==========*/
+section {
+  padding: 3.5rem 1.5rem;
+}
+
+section h2 {
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-align: center;
+  color: var(--dark);
+
+  margin-bottom: 0.75rem;
+}
+
+section > p {
+  font-size: 0.875rem;
+  font-weight: 400;
+  text-align: center;
+  line-height: 19.6px;
+  color: var(--dark);
+
+  max-width: 319px;
+  margin: 0 auto 2.5rem auto;
+}
+
+.sneakers {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  gap: 2.5rem;
+}
+
+.card .sneaker-image {
+  background-color: var(--gray);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* gap: 10px; */
+
+  /* padding: 2.03125rem 2.9375rem; */
+  width: 319px;
+  height: 200px;
+  margin-bottom: 1.5rem;
+}
+
+.card .sneaker-info {
+  max-width: 319px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+
+  margin-bottom: 1.5rem;
+}
+
+.card .sneaker-info h3 {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 20.8px;
+  color: var(--dark);
+}
+
+.card .sneaker-info span {
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--brand-color);
+}
+
+.card .sneaker-price {
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  color: var(--dark);
+  text-align: start;
+}
+
