--- a/desafio-03/src/components/Article/style.css
+++ b/desafio-03/src/components/Article/style.css
@@ -19,6 +19,12 @@
   line-height: 23.4px;
   color: var(--dark);
 
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   margin-bottom: 0.75rem;
 }
 
