--- a/desafio-03/src/style.css
+++ b/desafio-03/src/style.css
@@ -31,6 +31,7 @@ body {
   border-radius: 4px;
   padding-block: 0.875rem;
 
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
   color: var(--white);
