--- a/desafio-03/src/components/Footer/style.css
+++ b/desafio-03/src/components/Footer/style.css
@@ -1,5 +1,5 @@
 footer {
-  padding: 2rem 1.5rem;
+  padding: 2rem 0;
 }
 
 footer p {
@@ -15,4 +15,10 @@ footer a {
 
 footer a:hover {
   text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  footer p {
+    font-size: 0.875rem;
+  }
 }
