--- a/desafio-03/src/components/ArticleSection/style.css
+++ b/desafio-03/src/components/ArticleSection/style.css
@@ -25,7 +25,18 @@
   margin-bottom: 3.5rem;
 }
 .articles {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   gap: 3rem 2rem;
 }
+}
+
+@media screen and (min-width: 1216px) {
+  .article-section h2 {
+    font-size: 2rem;
+    margin-bottom: 7.0625rem;
+  }
+  .articles {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
