--- a/desafio-03/src/components/Form/style.css
+++ b/desafio-03/src/components/Form/style.css
@@ -27,3 +27,10 @@
     padding: 1.125rem 1.5rem;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .contact-form {
+    max-width: 592px;
+    margin: 0 auto;
+  }
+}
