--- a/desafio-03/src/components/Footer/style.css
+++ b/desafio-03/src/components/Footer/style.css
@@ -22,3 +22,9 @@ footer a:hover {
     font-size: 0.875rem;
   }
 }
+
+@media screen and (min-width: 768px) {
+  footer p {
+    font-size: 1rem;
+  }
+}
