--- a/desafio-03/src/style.css
+++ b/desafio-03/src/style.css
@@ -40,6 +40,7 @@ img {
   font-weight: 700;
   text-transform: uppercase;
   color: var(--white);
+  cursor: pointer;
 }
 
 .container {
@@ -52,7 +53,7 @@ img {
   }
 }  
 
-@media screen and (min-width: 1216px) {
+@media screen and (min-width: 1280px) {
   .container {
     max-width: 1216px;
     margin: 0 auto;
