--- a/desafio-03/src/components/Input/style.css
+++ b/desafio-03/src/components/Input/style.css
@@ -6,9 +6,14 @@
 
   border-radius: 0.25rem;
   border: 1px solid var(--gray-20);
+  outline: 0;
 
   padding: 1rem 1.125rem;
   margin-bottom: 1.5rem;
+}
+
+.input:focus {
+  border: 1px solid var(--brand-color);
 }
 
 @media screen and (min-width: 768px) {
