--- a/desafio-04/src/pages/Login/style.css
+++ b/desafio-04/src/pages/Login/style.css
@@ -1,7 +1,11 @@
 .grid-layout {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+}
+
+@media screen and (min-width: 1280px) {
+  .grid-layout {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
