--- a/desafio-05/src/pages/Movie/Header/Header.module.css
+++ b/desafio-05/src/pages/Movie/Header/Header.module.css
@@ -17,6 +17,9 @@
 @media (width >= 768px) {
   .header {
     justify-content: space-between;
+    max-width: 1216px;
+    padding: 3.2rem;
+    margin: 0 auto;
   }
   .logo {
     width: 13.5rem;
@@ -32,5 +35,22 @@
     padding: .6rem;
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
+  }
+}
+
+@media (width >= 1264px) {
+  .header {
+    max-width: 1216px;
+    padding: 4.8rem 0;
+    margin: 0 auto 12rem auto;
+  }
+  .logo {
+    width: 16.6rem;
+  }
+  .navbar {
+    width: 24rem;
+  }
+  .navbar li {
+    padding: 1.0rem;
   }
 }
