Finalizando a seção de projetos na versão mobile

--- a/desafio-06/src/App.css
+++ b/desafio-06/src/App.css
@@ -28,10 +28,15 @@ img {
   max-width: 100%;
 }
 
-span, button {
+span,
+button {
   display: block;
 }
 
 .container {
   padding: 0 2.4rem;
+}
+
+.section {
+  margin-bottom: 15rem;
 }
