Finalizando as seções de serviços e habilidades na versão mobile

--- a/desafio-06/src/layouts/Introduction/Introduction.module.css
+++ b/desafio-06/src/layouts/Introduction/Introduction.module.css
@@ -1,6 +1,6 @@
 .introduction {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
 
   margin-bottom: 6.4rem;
 }
