--- a/desafio-06/src/components/ProjectCard/ProjectCard.module.css
+++ b/desafio-06/src/components/ProjectCard/ProjectCard.module.css
@@ -47,3 +47,11 @@
 
   padding: 1rem 4rem;
 }
+
+@media (width >= 768px) { 
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 3.2rem;
+  }
+}
