--- a/desafio-06/src/layouts/AboutSection/AboutSection.module.css
+++ b/desafio-06/src/layouts/AboutSection/AboutSection.module.css
@@ -48,3 +48,15 @@
   font-size: 1.4rem;
   font-weight: 400;
 }
+
+@media (width >= 768px) { 
+  .description {
+    font-size: 2rem;
+  }   
+  .titulo {
+    font-size: 1.8rem;
+  }
+  .value {
+    font-size: 1.6rem;
+  }
+}
