--- a/desafio-06/src/layouts/ProjectSection/ProjectSection.module.css
+++ b/desafio-06/src/layouts/ProjectSection/ProjectSection.module.css
@@ -4,6 +4,8 @@
   gap: 3.2rem;
 }
 
-@media (width >= 768px) { 
-  
+@media (width >= 915px) { 
+  .projectContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
