--- a/desafio-06/src/components/ProjectCard/ProjectCard.module.css
+++ b/desafio-06/src/components/ProjectCard/ProjectCard.module.css
@@ -45,7 +45,7 @@
   border-radius: 0.4rem;
   cursor: pointer;
 
-  padding: 1rem 4rem;
+  padding: 1rem 2rem;
 }
 
 @media (width >= 768px) { 
@@ -53,5 +53,20 @@
     display: flex;
     flex-direction: row;
     gap: 3.2rem;
+  }
+}
+
+@media (width >= 1216px) {  
+  .projectImage span {
+    font-size: 2.4rem;
+  }
+  .title {
+    font-size: 2.4rem;
+  }
+  .buttons {
+    margin-bottom: 3.2rem
+  }
+  .button {
+    padding: 1rem 4rem;
   }
 }
