--- a/desafio-06/src/layouts/Footer/Footer.module.css
+++ b/desafio-06/src/layouts/Footer/Footer.module.css
@@ -1,15 +1,17 @@
 .footer {
+  background-color: var(--dark-20);
+  padding-block: 4rem;
+}
+
+.footerContent {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.2rem;
-
-  background-color: var(--dark-20);
   color: #fff;
-  padding-block: 3.9rem;
 }
 
-.footer p {
+.footerContent p {
   font-size: 1.6rem;
   font-weight: 500;
 }
@@ -30,11 +32,11 @@
 }
 
 @media (width >= 768px) { 
-  .footer {
+  .footerContent {
     flex-direction: row;
     justify-content: space-between;
   }
-  .footer p {
+  .footerContent p {
     font-size: 1.8rem;
   }
   .logo span {
