--- a/desafio-06/src/layouts/Header/Header.module.css
+++ b/desafio-06/src/layouts/Header/Header.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
 
   border-bottom: 2px solid var(--dark-20);
+  padding-block: 4rem;
   margin-bottom: 6.4rem;
 }
 
@@ -14,8 +15,84 @@
   color: var(--brand-color);
 }
 
+.menuToggle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 5rem;
+  height: 5rem;
+  background-color: var(--dark-20);
+  border: 1px solid var(--dark-30);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.menuToggle img {
+  width: 3.2rem;
+}
+
+.navbarMobile {
+  display: flex;
+  background-color: var(--dark-20);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 132px;
+  left: 0;
+  right: 0;
+  bottom: -50px;
+  z-index: 1000;
+}
+
+.navbarMobile ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6rem;
+  width: 100%;
+  margin-top: 8rem;
+}
+
+.navbar {
+  display: none;
+}
+
+.navbar ul li a,
+.navbarMobile ul li a {
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: var(--white);
+}
+
 @media (width >= 768px) {
   .logo {
     font-size: 2rem;
   }
+  .navbarMobile ul li a {
+  font-size: 2.4rem;
 }
+}
+
+@media (width >= 1100px) {
+  .menuToggle {
+    display: none;
+  }
+  .navbar {
+    display: flex;
+  }
+  .navbar ul {
+    display: flex;
+    gap: 5.6rem;
+  }
+}
+
+@media (width >= 1216px) { 
+  .logo {
+    font-size: 2.4rem;
+  }
+  .navbarMobile {
+    display: none;
+  }
+}
+
