--- a/desafio-06/src/layouts/Introduction/Introduction.module.css
+++ b/desafio-06/src/layouts/Introduction/Introduction.module.css
@@ -45,3 +45,17 @@
     display: block;
   }
 }
+
+@media (width >= 1216px) {
+  .title {
+    font-size: 3rem;
+  }
+  .title span {
+    font-size: 5rem; 
+    margin: 1.5rem 0 3rem 0;
+  }
+  .description {
+    font-size: 2.4rem;
+    margin-bottom: 4.8rem;
+  }
+}
