--- a/desafio-06/src/components/Title/Title.module.css
+++ b/desafio-06/src/components/Title/Title.module.css
@@ -4,7 +4,8 @@
   color: var(--brand-color);
   text-align: center;
 
-  margin-bottom: 4.8rem;
+  padding: 4.8rem 0;
+  /* margin-bottom: 4.8rem; */
 }
 
 @media (width >= 768px) {
