style: criaçao do layout mobile do desafio-10

--- a/desafio-10/src/index.css
+++ b/desafio-10/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.title {
+  @apply text-3xl font-semibold text-center text-dark mb-6;
+}
